# leveldb-forensic

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml
.github/workflows/: ci.yml  fuzz.yml
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-three-crate-core-forensic-cli-split.md  0002-parse-raw-structures-surface-tombstones.md  0003-read-only-lock-free-acquisition.md  0004-forbid-unsafe-panic-free-bounds-checked-fuzzed.md  0005-msrv-split-low-lib-floor-pinned-binary.md  0006-chrome-storage-decoding-lossy-secure-by-design.md  0007-prefer-our-own-protobuf-forensic-core.md  0008-independent-oracle-validation-and-output-formats.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_local.rs  decode_session.rs  parse_log.rs  parse_table.rs
leveldb-core/: Cargo.toml  README.md
leveldb-core/src/: bytes.rs  error.rs  lib.rs  log.rs  record.rs  sstable.rs
leveldb-core/tests/: oracle.rs  robustness.rs
leveldb-forensic/: Cargo.toml  README.md
leveldb-forensic/src/: lib.rs  localstorage.rs  sessionstorage.rs  value.rs
leveldb-forensic/tests/: decode.rs
leveldb4n6/: Cargo.toml  README.md
leveldb4n6/src/: lib.rs  main.rs  render.rs
leveldb4n6/tests/: cli.rs
supply-chain/: config.toml
