[workspace]
resolver = "2"
members = ["leveldb-core", "leveldb-forensic", "leveldb4n6"]

# Single source of truth for fields shared by every member (DRY): bump version /
# edition / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# The raw record reader, consumed by the Chrome storage decoder and the CLI.
leveldb-core = { version = "0.1.1", path = "leveldb-core" }
# The Chrome Local/Session Storage decoder, consumed by the leveldb4n6 CLI.
leveldb-forensic = { version = "0.1.1", path = "leveldb-forensic" }
# Pure-Rust LEB128 varints (LevelDB's on-disk integer encoding).
integer-encoding = "4"
# Schemaless protobuf wire-format decoder for the Local Storage `META:` record.
protobuf-forensic-core = "0.1"
# crc32c (masked) verification of SSTable block trailers and log records.
crc32c = "0.6"
# Snappy block decompression (LevelDB compression type 1).
snap = "1"
# CLI argument parsing.
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn", priority = -1 }
pedantic                 = { level = "warn", priority = -1 }
correctness              = { level = "deny", priority = -1 }
suspicious               = { level = "deny", priority = -1 }
unwrap_used              = { level = "deny", priority = 0 }
expect_used              = { level = "deny", priority = 0 }
module_name_repetitions  = { level = "allow", priority = 1 }
must_use_candidate       = { level = "allow", priority = 1 }
missing_errors_doc       = { level = "allow", priority = 1 }
missing_panics_doc       = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap       = { level = "allow", priority = 1 }
cast_sign_loss           = { level = "allow", priority = 1 }
cast_precision_loss      = { level = "allow", priority = 1 }
too_many_lines           = { level = "allow", priority = 1 }
items_after_statements   = { level = "allow", priority = 1 }
similar_names            = { level = "allow", priority = 1 }
manual_let_else          = { level = "allow", priority = 1 }
